<resources>
    <string name="app_name">Unscramble</string>
    <string name="enter_your_word">Enter your word</string>
    <string name="submit">Submit</string>
    <string name="skip">Skip</string>
    <string name="Unscramble_the_word">Unscramble the word</string>
    <string name="score">Score: %d</string>
    <string name="word_count">%d of %d words</string>
    <string name="alert_dialog_title">Congratulations!!!</string>
    <string name="alert_dialog_message">You scored %d</string>
    <string name="alert_dialog_negative_button_text">Exit</string>
    <string name="alert_dialog_positive_button_text">Play Again</string>
    <string name="try_again">Try Again</string>
</resources>